<resources>
    <string name="app_name">PhotoMoney</string>
    <string name="offers_string">Offers</string>
    <string name="service_string">Services</string>
    <string name="profile_string">Profile</string>
    <string name="login_top_text">Enter</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="btn_string">LogIn</string>
    <string name="btn_sign_up_string">SignUp</string>
    <string name="error_message">An error occurred while loading data. Check the connection …</string>
    <string name="back_button">Back</string>
    <string name="repeat">Repeat</string>
    <string name="first_name">First name</string>
    <string name="create_channel">Create channel</string>
    <string name="second_name">Second name</string>
    <string name="is_photographer">Are you photographer?</string>
    <string name="public_string">Public</string>
    <string name="private_shared_history">Private, shared history</string>
    <string name="private_protected_history">Private, protected history</string>
    <string name="yes_string">yes</string>
    <string name="no_string">no</string>
    <string name="register">SignUp</string>
    <string name="sign_up_title">SignUp</string>
    <string name="mail_string">Mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="avatar_url">Avatar Url</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hint_code_from_mail">Enter code</string>
    <string name="btn_check_string">Check</string>
    <string name="ye_sym">₽</string>
    <string name="make_photo">Создать заказ</string>
    <string name="select_photo">Выбрать заказ</string>
    <string name="generate_qr_code">Сгенерировать QR код</string>
    <string name="scan_qr_code">Сканировать QR код</string>
    <string name="show_photo_list">Посмотреть список фотографов</string>
    <string name="check_photo">Проверить фотографии</string>
    <string name="send_photo">Отправить фотографии</string>
    <string name="select_photographers">Выбрать фотографа</string>
    <string name="action">Акции</string>
    <string name="exit">Выход</string>
</resources>
