<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_back">

    <ScrollView
        android:id="@+id/svCreateNewStream"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCreateStream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_edit_message"
            android:paddingEnd="@dimen/padding_edit_message">


            <TextView
                android:id="@+id/tvSignUpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/stream_type_title"
                android:text="@string/sign_up_title"
                android:textColor="@color/white"
                android:textSize="@dimen/stream_type_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFirstName"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="20dp"
                android:hint="@string/first_name"
                app:expandedHintEnabled="false"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSignUpTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstName"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/first_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSecondName"
                style="@style/TextInputLayoutStyle"
                android:hint="@string/second_name"
                android:inputType="text"
                app:expandedHintEnabled="false"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilFirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSecondName"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/second_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMail"
                style="@style/TextInputLayoutStyle"
                android:hint="@string/mail_string"
                android:inputType="text"
                app:expandedHintEnabled="false"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilSecondName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMail"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/mail_string" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhoneNumber"
                style="@style/TextInputLayoutStyle"
                android:hint="@string/phone_number"
                android:inputType="text"
                app:expandedHintEnabled="false"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilMail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/phone_number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAvatarUrl"
                style="@style/TextInputLayoutStyle"
                android:hint="@string/avatar_url"
                android:inputType="text"
                app:expandedHintEnabled="false"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilPhoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAvatarUrl"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/avatar_url" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                style="@style/TextInputLayoutStyle"
                android:hint="@string/username"
                android:inputType="text"
                app:expandedHintEnabled="false"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilAvatarUrl">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/TextInputLayoutStyle"
                android:hint="@string/password"
                android:inputType="text"
                app:expandedHintEnabled="false"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvAccessStream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/stream_type_title"
                android:text="@string/is_photographer"
                android:textColor="@color/white"
                android:textSize="@dimen/stream_type_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

            <RadioGroup
                android:id="@+id/RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAccessStream">

                <RadioButton
                    android:id="@+id/radioYes"
                    style="@style/RadioButtonStyle"
                    android:text="@string/yes_string" />

                <RadioButton
                    android:id="@+id/radioNo"
                    style="@style/RadioButtonStyle"
                    android:text="@string/no_string" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreate"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/create_stream_margin_top"
                android:text="@string/register"
                app:backgroundTint="@color/send_box_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/RadioGroup"
                app:layout_constraintVertical_bias="0.3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBack"
                style="@style/ButtonStyle"
                android:layout_marginBottom="@dimen/create_stream_margin_top"
                android:text="@string/back_button"
                app:backgroundTint="@color/send_box_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnCreate" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvErrorConnection"
        style="@style/NestedScrollError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/errorContent"
            layout="@layout/error_content" />
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
