<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/appbar_margin_bottom"
        android:clipToPadding="false"
        android:elevation="@dimen/appbar_elevation"
        android:outlineProvider="paddedBounds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/chat_toolbar_height"
            android:background="@color/white"
            android:contentInsetStart="@dimen/toolbar_content_margin"
            app:contentInsetEnd="@dimen/toolbar_content_margin">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_gravity="start"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_photo_camera"
                tools:ignore="ContentDescription" />


            <TextView
                android:id="@+id/tv_stream_name_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/stream_name_text_size"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgRuble"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_gravity="end"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_money"
                tools:ignore="ContentDescription" />


            <ImageView
                android:id="@+id/imgNotify"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_gravity="end"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_notify"
                tools:ignore="ContentDescription" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_banner"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#F8F3EB"
        app:cardCornerRadius="22dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/photo_banner" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/stream_name_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreteOrder"
                style="@style/ButtonStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/make_photo"
                app:backgroundTint="@color/main_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_qr_code"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/main_color"
        app:cardCornerRadius="22dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/cv_banner">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgQrCode"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_qr_code"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_qr_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/generate_qr_code"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgQrCode"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_photo_list"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="2dp"
        app:cardBackgroundColor="@color/main_color"
        app:cardCornerRadius="22dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/cv_qr_code">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_photo_camera"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_photo_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/show_photo_list"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgPhoto"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_add_money"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="2dp"
        app:cardBackgroundColor="@color/main_color"
        app:cardCornerRadius="22dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/cv_photo_list">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgMoney"
                android:layout_width="@dimen/img_size"
                android:layout_height="@dimen/img_size"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_money_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_add_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/add_money"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgMoney"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
